I tested changing the file

--- a/test.html
+++ b/test.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </div>
-    <h1>Test test test</h1>
+    <h1>This is another change</h1>
 </body>
 <script src="js/test.js"></script>
 </html>
