--- a/index3.html
+++ b/index3.html
@@ -181,24 +181,13 @@
   </div>
   <hr>
   
-  <!-- Div to split LDA drilldown and sentiment analysis into two halves -->
-  
-  <div id="lda-nav">
-    <div class="w3-container w3-half w3-white w3-padding-32 w3-round-large w3-card" style="width: 49%;">
-      <h1 class="w3-bottombar w3-border-indigo w3-margin-left">LDA Analysis</h1>
-      <div id="charts" class="w3-container" style="height: 400px;">
-        <iframe src="./LDA.html" height="400" width="100%"></iframe>
-      </div>
-    </div>
-    <div class="w3-container w3-half w3-white w3-padding-32 w3-round-large w3-card w3-right" style="width: 49%;">
-      <h1 class="w3-bottombar w3-border-indigo w3-margin-left">Sentiment Analysis</h1>
-      <div id="donutchart-container" class="w3-container" style="height: 400px;">
-        <h3>Place graph here!</h3>
-      </div>
+  <!-- LDA Module -->
+  <div id="lda-nav" class="w3-container w3-padding-32 w3-margin-bottom w3-white w3-round-large w3-card">
+    <h1 class="w3-bottombar w3-border-indigo w3-margin-left">LDA Analysis</h1>
+    <div id="charts" class="w3-container" style="height: 800px;">
+      <iframe src="./LDA.html" height="800" width="100%"></iframe>
     </div>
   </div>
-  <div class="w3-container w3-margin-bottom"></div>
-  <hr>
 
   <!-- User clustering module -->
   <div id="clustering-nav" class="w3-container w3-margin-bottom w3-padding-32 w3-white w3-round-large w3-card"">
@@ -212,8 +201,8 @@
   <!-- Individual user statistics module -->
   <div id="userdata-nav" class="w3-container w3-margin-bottom w3-padding-32 w3-round-large w3-card w3-white" >
     <h1 class="w3-bottombar w3-border-indigo w3-margin-left">Individual User Data Analysis (placeholder)</h1>
-    <div class="w3-container" style="height: 400px">
-      <iframe src="./data_analysis.html" height="400px" width="100%"></iframe>
+    <div class="w3-container" style="height: 800">
+      <iframe src="./data_analysis.html" height="800" width="100%"></iframe>
     </div>
   </div>
 
